@@ -1,3 +1,9 @@
+2009-10-30  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* capplet/nwam_vpn_pref_dialog.c (vpn_pref_clicked_cb),
+	(nwam_vpn_selection_changed):
+	Fixed 12319  [RC4] rename VPN action does not match UI spec
+
 2009-10-29  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* capplet/nwam_condition_vbox.c (update_cond_from_row),
